[package]
name = "multitree"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A small CLI tool to manage Git worktrees"
repository = "https://github.com/<your-user>/<your-repo>"
readme = "README.md"
keywords = ["git", "worktree", "cli", "developer-tools"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
